RESOLVED FIXED208950
AX: Isolated tree: enabling secondary thread for the wrong clients
https://bugs.webkit.org/show_bug.cgi?id=208950
Summary AX: Isolated tree: enabling secondary thread for the wrong clients
chris fleizach
Reported 2020-03-11 15:27:49 PDT
It looks like we have an error in the patch where we are initializing the secondary thread for all clients
Attachments
patch (2.64 KB, patch)
2020-03-11 15:29 PDT, chris fleizach
no flags
Patch (3.71 KB, patch)
2020-03-11 16:04 PDT, Andres Gonzalez
no flags
Radar WebKit Bug Importer
Comment 1 2020-03-11 15:28:00 PDT
chris fleizach
Comment 2 2020-03-11 15:29:45 PDT
Andres Gonzalez
Comment 3 2020-03-11 16:04:47 PDT
WebKit Commit Bot
Comment 4 2020-03-11 16:56:48 PDT
Comment on attachment 393299 [details] Patch Clearing flags on attachment: 393299 Committed r258297: <https://trac.webkit.org/changeset/258297>
WebKit Commit Bot
Comment 5 2020-03-11 16:56:50 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.